# faucet

./: .env.example  .gitignore  .yarnrc.yml  Cargo.toml  clean.mjs  package.json
apps/server/: .env.example  Cargo.toml
apps/server/src/: main.rs
apps/server/src/constant/: mod.rs
apps/server/src/controller/: faucet.rs  html.rs  mail.rs  mod.rs
apps/server/src/error/: mod.rs
apps/server/src/router/: mod.rs
apps/server/src/service/: cache.rs  faucet.rs  mail.rs  mod.rs
apps/server/src/utils/: aes.rs  crypto.rs  eth.rs  mail.rs  mod.rs  rand.rs  rlp.rs  sha256.rs  sign.rs  time.rs
apps/web/: .lintstagedrc.js  next.config.js  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/context/theme/: index.tsx  theme.tsx
apps/web/src/http/: index.ts
apps/web/src/services/: index.ts
apps/web/src/utils/: index.tsx
apps/web/src/worker/: sha256.ts
