[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10.3"
base64 = "0.21"
sha2 = { version = "0.10", default-features = false }
hex="0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10"
rand= "0.8"
dotenv="0.15"
ethers = "2.0"
k256="0.13.1"
sha3="0.10.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tower-http = { version = "0.4.0", features = ["cors"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
crypto-bigint = "0.5.3"
uint = "0.8"
num-bigint = "0.4"
rlp="0.5.2"